--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
+spring.thymeleaf.prefix=classpath:/templates/
+
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_hospital
 spring.datasource.username=root
